# Goplayer

./: .env.template  .gitignore  GoRules.md  ItisMyGo.py  README.md  goboard.py  goenv.py  goplayer.py  goruler.py  pyproject.toml  readConfig.py  requriements.txt
.github/workflows/: deploy-gh-pages.yml
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/models/9x9/: goplayer_v1.json  goplayer_v1.onnx
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: GoBoardCanvas.tsx
frontend/src/game/: goGame.ts  modelConfig.ts
frontend/src/hooks/: useAI.ts
scripts/: export_onnx.py  train.py
src/Goplayer/: __init__.py  goboard.py  goenv.py  goplayer.py
src/rl/: __init__.py  encoder.py  mcts.py  net.py  replay_buffer.py  utils.py
